[gd_scene load_steps=6 format=3 uid="uid://dsw14ox7b7xdt"]

[ext_resource type="Script" path="res://scripts/World.gd" id="1_4qnki"]
[ext_resource type="PackedScene" uid="uid://cf1q0xds64gf3" path="res://scenes/player.tscn" id="1_bvb2d"]
[ext_resource type="Script" path="res://scripts/Blades.gd" id="3_pnblb"]

[sub_resource type="QuadMesh" id="QuadMesh_cruwx"]
size = Vector2(1000, 100)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_beh3j"]
size = Vector2(446, 36)

[node name="WORLD" type="Node2D"]
script = ExtResource("1_4qnki")

[node name="Player" parent="." instance=ExtResource("1_bvb2d")]

[node name="Platform" type="StaticBody2D" parent="."]
position = Vector2(248, 255)
scale = Vector2(50, 1)
collision_layer = 3

[node name="MeshInstance2D" type="MeshInstance2D" parent="Platform"]
modulate = Color(0, 0.211765, 0.211765, 1)
scale = Vector2(0.446, 0.36)
mesh = SubResource("QuadMesh_cruwx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform"]
shape = SubResource("RectangleShape2D_beh3j")

[node name="Platform2" type="StaticBody2D" parent="."]
position = Vector2(517, -42)
rotation = 1.57079
collision_layer = 3

[node name="MeshInstance2D" type="MeshInstance2D" parent="Platform2"]
modulate = Color(0, 0.211765, 0.211765, 1)
scale = Vector2(0.446, 0.36)
mesh = SubResource("QuadMesh_cruwx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform2"]
shape = SubResource("RectangleShape2D_beh3j")

[node name="Platform3" type="StaticBody2D" parent="."]
position = Vector2(635, -47)
rotation = 1.57079
collision_layer = 3

[node name="MeshInstance2D" type="MeshInstance2D" parent="Platform3"]
modulate = Color(0, 0.211765, 0.211765, 1)
scale = Vector2(0.446, 0.36)
mesh = SubResource("QuadMesh_cruwx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform3"]
shape = SubResource("RectangleShape2D_beh3j")

[node name="Platform4" type="StaticBody2D" parent="."]
position = Vector2(-374, 181)
collision_layer = 3

[node name="MeshInstance2D" type="MeshInstance2D" parent="Platform4"]
modulate = Color(0, 0.211765, 0.211765, 1)
scale = Vector2(0.446, 0.36)
mesh = SubResource("QuadMesh_cruwx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform4"]
shape = SubResource("RectangleShape2D_beh3j")

[node name="Platform5" type="StaticBody2D" parent="."]
position = Vector2(-820, 129)
collision_layer = 3

[node name="MeshInstance2D" type="MeshInstance2D" parent="Platform5"]
modulate = Color(0, 0.211765, 0.211765, 1)
scale = Vector2(0.446, 0.36)
mesh = SubResource("QuadMesh_cruwx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform5"]
shape = SubResource("RectangleShape2D_beh3j")

[node name="Platform6" type="StaticBody2D" parent="."]
position = Vector2(-1345, 30)
collision_layer = 3

[node name="MeshInstance2D" type="MeshInstance2D" parent="Platform6"]
modulate = Color(0, 0.211765, 0.211765, 1)
scale = Vector2(0.446, 0.36)
mesh = SubResource("QuadMesh_cruwx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform6"]
shape = SubResource("RectangleShape2D_beh3j")

[node name="Blades" type="Node2D" parent="."]
script = ExtResource("3_pnblb")

[node name="Port" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[connection signal="blade" from="Player" to="." method="_on_player_blade"]
[connection signal="child_entered_tree" from="Blades" to="." method="_on_blades_child_entered_tree"]
[connection signal="tele" from="Blades" to="." method="_on_blades_tele"]
[connection signal="timeout" from="Port" to="." method="_on_port_timeout"]
